Added Vim to gitconfig, removed UTF8 tmux and added Rust to Vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
+# No longer needed
 # utf8
-set -g utf8
-setw -g utf8 on
+# set -g utf8
+# setw -g utf8 on
 
 set -g default-terminal "screen-256color"
 
