--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,9 @@ set -g renumber-windows on
 
 bind r source-file ~/.tmux.conf
 
+# Vi mode
+set-window-option -g mode-keys vi
+
 # vim movement keys between panes
 bind h select-pane -L
 bind j select-pane -D
